[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/menus/main menu/title.png" type="Texture" id=1]
[ext_resource path="res://src/shaders/blur.shader" type="Shader" id=2]
[ext_resource path="res://src/ui/menus/main menu/main.gd" type="Script" id=3]
[ext_resource path="res://src/sounds/music/Moonlight-Flying_Looping.ogg" type="AudioStream" id=4]
[ext_resource path="res://src/backgrounds/pixel room.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/blurSize = 2.5

[sub_resource type="ExternalTexture" id=2]

[node name="GameInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1.2, 1.4, 1.5, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 512, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BLurLayer" type="TextureRect" parent="Background"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 5
custom_constants/margin_right = 80
custom_constants/margin_top = 80
custom_constants/margin_left = 80
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VSplitContainer" parent="MarginContainer"]
margin_left = 80.0
margin_top = 80.0
margin_right = 1200.0
margin_bottom = 690.0
collapsed = true
dragger_visibility = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1120.0
margin_bottom = 120.0

[node name="GameTitle" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 430.0
margin_right = 690.0
margin_bottom = 120.0
rect_min_size = Vector2( 260, 120 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 1 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 1120.0
margin_bottom = 610.0
grow_horizontal = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 515.0
margin_top = 119.0
margin_right = 605.0
margin_bottom = 359.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 90.0
margin_bottom = 45.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 90.0
margin_bottom = 110.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 90.0
margin_bottom = 175.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 195.0
margin_right = 90.0
margin_bottom = 240.0
size_flags_horizontal = 5
size_flags_vertical = 4
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_pressed"]
